Integra APIs reais das redes sociais: Twitter funcional, outras com estrutura para implementação

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,24 @@ MAX_CAMPAIGNS_PER_USER=3
 REQUIRE_HUMAN_APPROVAL=true
 LOG_LEVEL=INFO
 DEBUG=false
+
+# APIs de Redes Sociais (opcionais - deixe vazio para usar simulações)
+META_ACCESS_TOKEN=
+META_APP_ID=
+GOOGLE_ADS_CUSTOMER_ID=
+GOOGLE_ADS_DEVELOPER_TOKEN=
+GOOGLE_ADS_CLIENT_ID=
+GOOGLE_ADS_CLIENT_SECRET=
+GOOGLE_ADS_REFRESH_TOKEN=
+TWITTER_BEARER_TOKEN=
+TWITTER_API_KEY=
+TWITTER_API_SECRET=
+TWITTER_ACCESS_TOKEN=
+TWITTER_ACCESS_TOKEN_SECRET=
+LINKEDIN_ACCESS_TOKEN=
+LINKEDIN_CLIENT_ID=
+TIKTOK_ACCESS_TOKEN=
+TIKTOK_APP_ID=
+YOUTUBE_API_KEY=
+PINTEREST_ACCESS_TOKEN=
+SNAPCHAT_ACCESS_TOKEN=
