--- a/requirements.txt
+++ b/requirements.txt
@@ -35,3 +35,10 @@ python-jose[cryptography]>=3.5.0
 passlib[bcrypt]>=1.7.0
 sqlalchemy>=2.0.0
 pytrends>=4.9.0
+
+# APIs de Redes Sociais
+tweepy>=4.14.0  # Twitter/X
+google-ads>=23.0.0  # Google Ads
+linkedin-api>=2.0.0  # LinkedIn (opcional, ou usar requests)
+pinterest-api>=1.0.0  # Pinterest (se disponível)
+# TikTok, Snapchat, YouTube usam requests direto
